--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -3,6 +3,7 @@
 @import "./variables";
 @import "./header";
 @import "./footer";
+@import "./mission";
 
 @font-face {
   font-family: GothamMedium;
@@ -386,6 +387,7 @@ input {
     }
   }
 }
+
 /****************************************/
 .video {
   position: relative;
@@ -403,12 +405,9 @@ input {
     h2 {
       margin-bottom: 15px;
       margin-top: 5px;
-      font-weight: 400;
-      font-size: 80px;
-      font-family: League;
-      margin-bottom: 10px;
       width: 500px;
-      line-height: 70px;
+      margin-bottom: 10px;
+      @include titreH2_blanc;
     }
     .containerVideo_Text {
       color: #bec5c9;
